--- a/timestamp-to-readable/options.html
+++ b/timestamp-to-readable/options.html
@@ -25,7 +25,7 @@
     <label><input type="checkbox" id="ms_mode"> Allow microseconds (JavaScript native)</label>
   </fieldset>
   <fieldset>
-   <legend>Reset:</legend>
+   <legend>Maintenance</legend>
    <button id="reset">Reset extension</button>
   </fieldset>
   <script src="common.js"></script>
