Process http(s):// and file:// urls. Add individual_title_mode. Cosmetics on converter page.

--- a/timestamp-to-readable/converter-page.html
+++ b/timestamp-to-readable/converter-page.html
@@ -7,8 +7,13 @@
   <link rel="stylesheet" type="text/css" href="converter-page.css">
 </head>
 <body>
-  <textarea id="inputarea" placeholder="Enter timestamps here..."></textarea>
+  <div>
+    <a href="options.html">[⚙ options]</a>
+    <span id="cleanbutton">[✖ clear]</span>
+  </div>
+  <textarea id="inputarea" placeholder="Enter timestamps here..." rows="7"></textarea>
   <table id="outputarea"></table>
+  <script src="common.js"></script>
   <script src="converter-page.js"></script>
 </body>
 </html>
