Support micro- and nanoseconds; bump version v0.0.2.0 and year; cosmetics

--- a/timestamp-to-readable/options.html
+++ b/timestamp-to-readable/options.html
@@ -15,7 +15,9 @@
   </fieldset>
   <fieldset>
     <legend>Timestamp format</legend>
-    <label><input type="checkbox" id="ms_mode"> Allow microseconds (JavaScript native)</label>
+    <label><input type="checkbox" id="ms_mode"> ms (10<sup>-3</sup> JavaScript native)</label><br>
+    <label><input type="checkbox" id="cs_mode"> μs (10<sup>-6</sup>)</label><br>
+    <label><input type="checkbox" id="ns_mode"> ns (10<sup>-9</sup> Hmm... Say what's on your mind?)</label>
   </fieldset>
   <fieldset>
     <legend>Highlight</legend>
